// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsViews ErrorsStatusbar displays error 1`] = `
<div>
  <div
    class="sc-bdVaJa kwzqrW"
  >
    <span
      class="sc-cbkKFq jiujot"
      title="Test.Error: Test error description"
    >
      <i
        class="sc-giadOv gCoGSu fa fa-exclamation-triangle"
      />
       
      Test.Error: Test error description
    </span>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsStatusbar displays nothing if no error 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="sc-cmthru dOFAbk"
  >
    <div
      class="sc-hMFtBS ejnTSD"
    >
      <div
        class="sc-cLQEGU fzeoYG"
      >
        <div
          class="sc-bAeIUo sc-GMQeP jLXPqa"
        >
          ERROR
        </div>
        <h4
          class="sc-bXGyLb hvjpqa"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="sc-gqPbQI lnbsjh"
      >
        <pre
          class="sc-eLExRp ehKsMt"
        >
          not found
        </pre>
      </div>
      <div
        class="sc-bMVAic juzQFk"
      >
        <a
          class="sc-hORach dxDQuR"
        >
          <i
            class="sc-jVODtj iHlPyG fa fa-play-circle-o"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsView does displays an error 1`] = `
<div>
  <div
    class="sc-cmthru dOFAbk"
  >
    <div
      class="sc-hMFtBS ejnTSD"
    >
      <div
        class="sc-cLQEGU fzeoYG"
      >
        <div
          class="sc-bAeIUo sc-GMQeP jLXPqa"
        >
          ERROR
        </div>
        <h4
          class="sc-bXGyLb hvjpqa"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="sc-gqPbQI lnbsjh"
      >
        <pre
          class="sc-eLExRp ehKsMt"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;
